--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "onemore-reduxapp",
-  "version": "0.0.1",
-  "description": "One more Redux application",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Sergey Smirnov <sayrus89@live.ru>",
-  "license": "ISC",
-  "dependencies": {
-    "immutable": "^3.8.1",
-    "lodash": "^4.13.1",
-    "material-ui": "^0.15.0",
-    "react": "^15.1.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "^2.21.0",
-    "less": "^2.7.1",
-    "react-hot-loader": "^3.0.0-beta.2",
-    "redux-devtools": "^3.3.1",
-    "webpack": "^1.13.1"
-  }
+    "name": "onemore-reduxapp",
+    "version": "0.0.1",
+    "description": "One more Redux application",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "author": "Sergey Smirnov <sayrus89@live.ru>",
+    "license": "ISC",
+    "dependencies": {
+        "immutable": "^3.8.1",
+        "lodash": "^4.13.1",
+        "material-ui": "^0.15.0",
+        "react": "^15.1.0",
+        "react-redux": "^4.4.5",
+        "redux": "^3.5.2"
+    },
+    "devDependencies": {
+        "html-webpack-plugin": "^2.21.0",
+        "less": "^2.7.1",
+        "react-hot-loader": "^3.0.0-beta.2",
+        "redux-devtools": "^3.3.1",
+        "webpack": "^1.13.1",
+        "webpack-dev-server": "^1.14.1"
+    }
 }
