--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-    "name": "onemore-reduxapp",
-    "version": "0.0.1",
-    "description": "One more Redux application",
-    "main": "src/index.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "author": "Sergey Smirnov <sayrus89@live.ru>",
-    "license": "ISC",
-    "dependencies": {
-        "immutable": "^3.8.1",
-        "lodash": "^4.13.1",
-        "material-ui": "^0.15.0",
-        "react": "^15.1.0",
-        "react-redux": "^4.4.5",
-        "redux": "^3.5.2"
-    },
-    "devDependencies": {
-        "html-webpack-plugin": "^2.21.0",
-        "less": "^2.7.1",
-        "react-hot-loader": "^3.0.0-beta.2",
-        "redux-devtools": "^3.3.1",
-        "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1"
-    }
+  "name": "onemore-reduxapp",
+  "version": "0.0.1",
+  "description": "One more Redux application",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "author": "Sergey Smirnov <sayrus89@live.ru>",
+  "license": "ISC",
+  "dependencies": {
+    "immutable": "^3.8.1",
+    "lodash": "^4.13.1",
+    "material-ui": "^0.15.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "html-webpack-plugin": "^2.21.0",
+    "less": "^2.7.1",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "redux-devtools": "^3.3.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
