--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "redux": "^3.5.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.21.0",
     "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "react-hot-loader": "^3.0.0-beta.2",
     "redux-devtools": "^3.3.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
