--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2"
   },
   "devDependencies": {
